--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "core-js": "^2.5.7",
+    "node-vibrant": "^3.0.0",
     "rgbaster": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
