--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,6 +11,16 @@
     "default_title": "thesis-extension_01",
     "default_popup": "popup/popup.html"
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content/content.js"
+      ]
+    }
+  ],
   "background": {
     "scripts": [
       "background/background.js"
