--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "core-js": "^2.5.7",
     "ifvisible.js": "^1.0.6",
+    "lodash": "^4.17.11",
     "node-vibrant": "^3.0.0",
     "rgbaster": "^1.0.0",
     "vue": "^2.5.17",
