--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^2.5.7",
     "ifvisible.js": "^1.0.6",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "node-vibrant": "^3.0.0",
     "rgbaster": "^1.0.0",
     "vue": "^2.5.17",
