--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
     "ifvisible.js": "^1.0.6",
     "lodash": "^4.17.11",
