--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "chart.js": "^2.7.3",
     "core-js": "^2.5.7",
+    "gsap": "^2.0.2",
     "ifvisible.js": "^1.0.6",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
