--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "chart.js": "^2.7.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "core-js": "^2.5.7",
     "gsap": "^2.0.2",
     "ifvisible.js": "^1.0.6",
